Fix hr element on IE

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -45,6 +45,7 @@ img[title=CARTO] {
 }
 
 hr {
+  text-align: left;
   width: 17px;
   margin: 20px 0 40px 0;
   border: 1px solid $accent-color-6;
